Fixed image visibility

--- a/css/index.css
+++ b/css/index.css
@@ -46,12 +46,11 @@ body{
   flex-direction: column;
 }
 
-.task-img {
-  background-image: url("/images/annoncumentWebsite.png");
+.task-img img {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 150px;
+  height: auto;
   width: 100%;
   border-radius: 20px 20px 0 0;
 }
